# chula-stem

./: .envrc  .gitignore  .stignore  MANIFEST.org  backup.sh  env.yaml  mise.toml  notes.org  pyproject.toml  pyrightconfig.json  rsync_nas.sh  rsync_other.sh  samples.org  todo.org  upload_nas_template.toml  upload_to_nas.py
.scratch/: 2026-03-11_plotting_svs.R  2026-03-11_tcr_cloning.py  2026-03-26_get_cd4_clones.py
analyses/: common.smk  env.yaml  hccn_abundance.R  pdac_vaf_plot.r
analyses/brca/: env.yaml  gene_lists.yaml  prepare_data.R  re_endopredict.R
analyses/cca_exome/: dndscv.yaml  make_vaf_plot.sh  msi_config.yaml  review.jbrowse  vaf_config.yaml
analyses/cluster_reproducibility/: cluster.R  env.yaml  main.py  simulate.R
analyses/corneal/: .env.R  README.org  data_setup.py  fibro.py  find_markers.R  main.R  tet_dge.py
analyses/crc_exome/: Snakefile  config.yaml  dndscv.yaml  get_sbs.py  get_tmb.R  make_msi.sh  make_vaf_plot.sh  manual_vaf.R  msi_config.yaml  select_genes.R  vaf_config.yaml  vaf_plot.R  view_msi.R
analyses/h1_hmg_intensity/: main.R
analyses/hcc/: abundance_internal.R  autobin.bash  get_cnvkit_purity.bash  hcc_data_setup.R  hccn_abundance.R  main.R  plot_hcc_cnvkit.R  purecn.bash  purecn_cnvkit.bash
analyses/pdac/: alignment_plot.R  cross_reference.R  gene_plot.R  get_old_data.bash  get_old_tsv.R  get_substitution_types.py  get_substitution_types.r  get_variant_calls.R  kras_evidence.txt  look_for.bash  main.R  pink_GATK_preprocessing.sh  pink_GATK_variant-calling.sh  test.py  vaf_plot.r  variants_from_maf.R
analyses/pdac_dresponse/: env.yaml  main.R  run_snakemake.sh
analyses/pdac_phcase/: phcase_6.R  run_vep.bash
analyses/pdac_tcr/: custom_plot.py  env.yaml  fns.py  get_cellassign_markers.py  prepare_db.py  rhapsody_1.yml  run_rhapsody.sh  testzone.R  testzone.py
analyses/scrnaseq_hcc/: Snakefile  cellranger_config.yaml  functions.py  get_markers.R  get_markers.py  manifest.csv  marimo.sh  notebook.py  recreate_sct.R  smk.R  smk.py  view_dr.py
analyses/tcga_data/: main.R  write_types.R
config/: datastore_actions_template.yaml
meta/: all.org  crc_exome.tsv
nextflow/: README.org  main.nf  make_routine.bash  nextflow.config  nf-test.config  srun_nf_test.sh
resources/: 2025-1-9_get_pandrugs_cache.py  compare_pdac.bash  cosmic_signatures.py  create_mappability.bash  delly_exclude.bash  dndscv_testfile.sh  filter_ncbi_genome.bash  gatk_resource_bundle.bash  get_delly_mappability.bash  get_gff.bash  make_ref_genome_package.bash  make_salmon_index.bash  make_star_genome_index.bash  meta.yaml  prepare_cnv_repeat_data.bash  prepare_genome.bash  prepare_pileup.bash  signature_therapies.csv  util.bash  wes_format_variants.bash  wes_format_variants_chr.bash
rust/: Cargo.toml
rust/src/: lib.rs  nf_utils.rs
tests/: freec_config.bash  session.py  test_add_info_tag.r  test_ascat.r  test_callset_qc.py  test_cnmops.R  test_databases.py  test_datastore.sh  test_dndscv.py  test_pdac_subtyping.py  test_plotting.py  test_pon.bash  test_r_utils.py  test_random.r  test_report.py  test_report_restart.bash  test_report_therapeutic.py  test_scrna.R  test_snakemake.py  test_utils.py
(+317 files in other folders)
