[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chula_stem"
requires-python = ">=3.8"
dependencies = ["rpy2", "pandas", "click", "toml", "polars"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chula_stem._rust"

[project.scripts]
dndscv_buildref = "chula_stem.dndscv:buildref"
make_freec_config = "chula_stem.utils:make_freec_config"
format_vep_vcf = "chula_stem.utils:format_vep_vcf"
classify_cnv_format = "chula_stem.utils:classify_cnv_format"
