[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chula_stem"
requires-python = ">=3.8"
dependencies = ["rpy2", "pandas", "click", "polars==1.17", "pymupdf",
"reportlab", "gql[aiohttp]"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chula_stem._rust"

[project.scripts]
format_vep_vcf = "chula_stem.utils:format_vep_vcf"
classify_cnv_format = "chula_stem.utils:classify_cnv_format"
callset_qc = "chula_stem.callset_qc:qc_main"
pipeline_report = "chula_stem.report.cli.entry_point"
