[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chula_stem"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "click",
  "polars==1.17[pyarrow]",
  "scirpy",
  "pymupdf",
  "reportlab",
  "scanpy",
  "scipy",
  "gql[aiohttp]",
  "requests",
  "scvi-tools>=1.2.2.post2",
  "anndata>=0.11.3",
  "pyhere>=1.0.3",
  "scib>=1.1.7",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chula_stem._rust"

[project.scripts]
format_vep_vcf = "chula_stem.utils:format_vep_vcf"
classify_cnv_format = "chula_stem.utils:classify_cnv_format"
callset_qc = "chula_stem.callset_qc:qc_main"
pipeline_report = "chula_stem.report.cli:entry_point"
get_therapy_cache = "chula_stem.databases:therapy_cache_from_files"
read_10x_mtx = "chula_stem.sc_rnaseq:read_10x_mtx"
combine_counts = "chula_stem.utils:combine_counts"
ds_actions = "chula_stem.datastore_actions:main"
